# mail-budget-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  airflow.cfg  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  stop-airflow.sh
config/: airflow.cfg
dags/: process_emails.py
db/: init.sql
db/migrations/: env.py
db/migrations/versions/: ced6ac200176_first_migration.py
src/: db.py  email_extract.py  email_fetcher.py  extract.py  logger.py  models.py  prompts.py  transaction_filters.py
tests/: test_email_extract.py  test_email_fetcher.py  test_extract.py
