[project]
name = "mailbudgettracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Wisdom",email = "matthewwisdom11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apiclient (>=1.0.4,<2.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.160.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
